syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ebukacodes21/soleluxury-server/pb";

message Billboard {
    int64 id = 1;
    int64 store_id = 2;
    string label = 3;
    string image_url = 4;
    google.protobuf.Timestamp created_at = 5;
}