syntax = "proto3";

package pb;

option go_package = "github.com/ebukacodes21/soleluxury-server/pb";

import "general.proto";

message CreateOrderRequest {
    repeated string items = 1;
    string email = 2;
}

message CreateOrderResponse {
    string url = 1;
}

message GetOrdersResponse {
    repeated Order orders = 1;
}